Fix con4_graph css overlap issue.

--- a/src/con4/graph.css
+++ b/src/con4/graph.css
@@ -52,7 +52,7 @@
   }
 }
 
-@media (min-width: 800px) and (max-width: 1400px) {
+@media (min-width: 800px) {
   .con4_graph_graph {
     aspect-ratio: 1.5;
     margin-top: 5%;
@@ -60,26 +60,5 @@
   }
   .con4_graph_wrapper {
     padding: 2% 25% 5% 25%;
-  }
-}
-
-@media (min-width: 1400px) {
-  .con4_graph {
-    width: 100%;
-    height: 100vh;
-  }
-  .con4_graph_graph {
-    height: 100%;
-    min-height: 80vh;
-    width: 70%;
-  }
-  .con4_graph_wrapper {
-    position: absolute;
-    right: 0;
-    top: 0;
-    height: 100%;
-    padding-top: 20%;
-    padding-right: 20px;
-    margin: auto 0;
   }
 }
